CProject/main.err
main.c:28:1: warning: return type defaults to ‘int’ [-Wimplicit-int]
 main()
 ^~~~
main.c: In function ‘main’:
main.c:46:22: warning: format ‘%d’ expects argument of type ‘int *’, but argument 2 has type ‘int’ [-Wformat=]
             scanf("%1d", scan);
                    ~~^
main.c:54:13: warning: implicit declaration of function ‘encoderPrestation’; did you mean ‘ajouterPrestation’? [-Wimplicit-function-declaration]
             encoderPrestation();
             ^~~~~~~~~~~~~~~~~
             ajouterPrestation
main.c:58:13: warning: implicit declaration of function ‘rechercherPatient’; did you mean ‘ajouterPatient’? [-Wimplicit-function-declaration]
             rechercherPatient();
             ^~~~~~~~~~~~~~~~~
             ajouterPatient
main.c:62:13: warning: implicit declaration of function ‘PrendreRendezVous’ [-Wimplicit-function-declaration]
             PrendreRendezVous();
             ^~~~~~~~~~~~~~~~~
main.c:133:24: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
             prescourant=fscanf(stdat,"%6d", &prescourant->num);
                        ^
main.c:141:28: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
                 prescourant=fscanf(stdat,"%6d", &prescourant->num);
                            ^
main.c:145:24: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
             prescourant=fscanf(ophdat,"%6d", &prescourant->num);
                        ^
main.c:153:28: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
                 prescourant=fscanf(ophdat,"%6d", &prescourant->num);
                            ^
main.c:157:24: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
             prescourant=fscanf(orldat,"%6d", &prescourant->num);
                        ^
main.c:165:28: warning: assignment makes pointer from integer without a cast [-Wint-conversion]
                 prescourant=fscanf(orldat,"%6d", &prescourant->num);
                            ^
main.c:178:27: warning: passing argument 1 of ‘ajouterPrestation’ from incompatible pointer type [-Wincompatible-pointer-types]
         ajouterPrestation(&patcourant, numero, prescourant->libelle);
                           ^
main.c:36:49: note: expected ‘Patient * {aka struct Patient *}’ but argument is of type ‘Patient ** {aka struct Patient **}’
         void ajouterPatient(char[], Patient *), ajouterPrestation(Patient *, int, char[]);
                                                 ^~~~~~~~~~~~~~~~~
main.c: In function ‘ajouterPatient’:
main.c:188:22: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
     *patcourant->niss=numRegNat;
                      ^
main.c: In function ‘ajouterPrestation’:
main.c:200:5: error: invalid type argument of unary ‘*’ (have ‘int’)
     *patcourant->presnouveau->num=numero;
     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
main.c:201:38: warning: assignment makes integer from pointer without a cast [-Wint-conversion]
     *patcourant->presnouveau->libelle=nomPres;
                                      ^
